--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@ $welcome-message Lobby settings made with the Paste Machine https://docs.google.
                         let shortLabel = "";
                         if (label === "Mini Bosses") {
                             shortLabel = "[Mini Bosses]";
-                        } else if (label === "EXPERMENTIAL WAVE CHANGES") {
+                        } else if (label === "Experimental Wave Changes") {
                             shortLabel = "[Expo Waves]";
                         }
                         groupedOptions.extraRaptors.choices.push({ label: label, value: commandBlock, shortLabel: shortLabel });
